<resources>
    <string name="app_name">EsnNationalPlatform</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="google_maps_key">AIzaSyD570A-4PVaRkLLuiBX0wNtE9R3adr4rBk</string>

    <!--Strings used in the menu-->
    <string name="action_settings">Settings</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_tips">Tips</string>
    <string name="menu_map">Map</string>
    <string name="menu_awards">Awards</string>
    <string name="menu_more_info">More Info</string>
    <string name="menu_oc_members">OC Members</string>
    <string name="menu_about">About</string>
    <string name="about_title">ESN National Platform App</string>
    <string name="about_version_number">v1.0.2</string>
    <string name="about_geek_team">© GeekTeam</string>
    <string name="about_esn_france">ESN France</string>
</resources>
