<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_schedule"
            android:icon="@drawable/ic_schedule"
            android:title="@string/menu_schedule" />

        <item
            android:id="@+id/menu_tips"
            android:icon="@drawable/ic_tips"
            android:title="@string/menu_tips" />
        <item
            android:id="@+id/menu_map"
            android:icon="@drawable/ic_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/menu_awards"
            android:icon="@drawable/ic_awards"
            android:title="@string/menu_awards" />

    </group>

    <item android:title="@string/menu_more_info">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_oc_members"
                    android:icon="@drawable/ic_oc_members"
                    android:title="@string/menu_oc_members" />

                <item
                    android:id="@+id/menu_about"
                    android:icon="@drawable/ic_about"
                    android:title="@string/menu_about" />
            </group>
        </menu>
    </item>
</menu>
